deploy/kubernetes/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  labels:
    app: envoy
    component: gateway
    part-of: semantic-router
    managed-by: kustomize
  namespace: semantic-router

data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8801
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                  log_format:
                    json_format:
                      time: "%START_TIME%"
                      protocol: "%PROTOCOL%"
                      request_method: "%REQ(:METHOD)%"
                      request_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                      response_code: "%RESPONSE_CODE%"
                      response_flags: "%RESPONSE_FLAGS%"
                      bytes_received: "%BYTES_RECEIVED%"
                      bytes_sent: "%BYTES_SENT%"
                      duration: "%DURATION%"
                      upstream_host: "%UPSTREAM_HOST%"
                      upstream_cluster: "%UPSTREAM_CLUSTER%"
                      upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
                      request_id: "%REQ(X-REQUEST-ID)%"
                      selected_model: "%REQ(X-SELECTED-MODEL)%"
                      selected_endpoint: "%REQ(X-SEMANTIC-DESTINATION-ENDPOINT)%"
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: vllm_dynamic_cluster
                      timeout: 300s
              http_filters:
              - name: envoy.filters.http.ext_proc
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                  grpc_service:
                    envoy_grpc:
                      cluster_name: extproc_service
                  allow_mode_override: true
                  processing_mode:
                    request_header_mode: "SEND"
                    response_header_mode: "SEND"
                    request_body_mode: "BUFFERED"
                    response_body_mode: "BUFFERED"
                    request_trailer_mode: "SKIP"
                    response_trailer_mode: "SKIP"
                  failure_mode_allow: true
                  message_timeout: 300s
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                  suppress_envoy_headers: true
              http2_protocol_options:
                max_concurrent_streams: 100
                initial_stream_window_size: 65536
                initial_connection_window_size: 1048576
              stream_idle_timeout: 300s
              request_timeout: 300s
              common_http_protocol_options:
                idle_timeout: 300s

      clusters:
      - name: extproc_service
        connect_timeout: 300s
        per_connection_buffer_limit_bytes: 52428800
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                connection_keepalive:
                  interval: 300s
                  timeout: 300s
        load_assignment:
          cluster_name: extproc_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: semantic-router.semantic-router.svc.cluster.local
                    port_value: 50051

      - name: vllm_dynamic_cluster
        connect_timeout: 300s
        per_connection_buffer_limit_bytes: 52428800
        type: ORIGINAL_DST
        lb_policy: CLUSTER_PROVIDED
        original_dst_lb_config:
          use_http_header: true
          http_header_name: "x-semantic-destination-endpoint"
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http_protocol_options: {}

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 19000
